--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,24 @@
-   {
-        "version": 2,
-         "builds": [
-           {
-             "src": "src/index.js",
-             "use": "@vercel/node"
-           }
-         ],
-      "routes": [
-      {
-         "src": "/(.*)", 
-         "dest": "/"
-      }
-      ]
-   }
-   
+{
+   "version": 2,
+   "builds": [
+     {
+       "src": "src/index.js",
+       "use": "@vercel/node"
+     }
+   ],
+   "routes": [
+     {
+       "src": "/api/v1/(.*)",
+       "dest": "/api/v1/$1"
+     },
+     {
+       "src": "/api2/v2/inst/(.*)",
+       "dest": "/api2/v2/inst/$1"
+     },
+     {
+       "src": "/(.*)",
+       "dest": "/"
+     }
+   ]
+ }
+ 
