--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,12 @@
-   {
-        "version": 2,
-         "builds": [
-           {
-             "src": "src/app.js",
-             "use": "@vercel/node"
-           }
-         ],
-      "routes": [
-      {
-         "src": "/(.*)", 
-         "dest": "/"
-      }
-      ]
-   }
-   
+{
+   "version":2,
+     "builds":[{
+       "src":"src/*.js" , "use":"@vercel/node"
+     }],
+     "routes":[
+       {
+         "src":"/(.*)",
+         "dest":"/"
+       }
+      ]
+  }
