--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "e-learning",
   "version": "1.0.0",
   "description": "to manage backend of E learn website",
-  "main": "index.js",
+  "main": "src/index.js",
   "type": "module",
   "scripts": {
     "dev": "nodemon src/index.js"
